# DBBTestTask

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Pipfile  README.md  alembic.ini  database.db  db.py  main.py  pyproject.toml
.github/workflows/: python-app.yml  workflow.yml
DBBTestTask/contrib/: conftest.py
DBBTestTask/contrib/api/: urls.py
DBBTestTask/contrib/users/: auth.py  models.py  test_api.py
DBBTestTask/contrib/users/api/: views.py
DBBTestTask/settings/: __init__.py
migration/: env.py
migration/versions/: 0b7f99b782b6_init.py  4475672645e4_init.py  5239b2b254d7_update_library_models.py  af64bff0ab78_create_borrowing_model.py  c7b1dd77dd7e_remove_id_for_book_borrow.py
